# tictactoe-ur3e

./: .gitignore  CLAUDE.md  README.md  tictactoe-ur3e.jazzy.repos
tictactoe_msgs/: CMakeLists.txt  package.xml
tictactoe_msgs/msg/: BoardState.msg  MoveCommand.msg
tictactoe_robot/: package.xml  setup.py
tictactoe_robot/config/: tictactoe_controllers.yaml
tictactoe_robot/launch/: tictactoe.launch.py
tictactoe_robot/tictactoe_robot/scripts/: arm_control.py  game_ai.py  mock_vision.py
tictactoe_robot/urdf/: tictactoe_arm.urdf.xacro
tictactoe_robot/worlds/: tictactoe.sdf
