<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tictactoe_robot</name>
  <version>0.1.0</version>
  <description>Tic-tac-toe pick-and-place simulation with UR3e in Gazebo Harmonic.</description>
  <maintainer email="ardilturhan@gmail.com">Ardil Turhan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tictactoe_msgs</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
